--- a/packages/desktop-client/src/fonts.scss
+++ b/packages/desktop-client/src/fonts.scss
@@ -1,5 +1,3 @@
 @use '@fontsource/redacted-script';
-@use 'inter-ui/variable' with (
-  $inter-font-path: 'inter-ui/variable'
-);
-@include variable.default;
+@use '@fontsource-variable/inter/wght.css' as *;
+@use '@fontsource-variable/inter/wght-italic.css' as *;
