Create an option for stacked net worth graph
This commit adds an option to the net worth graph that makes it into a
stacked line graph.

--- a/packages/desktop-client/src/components/reports/overview.scss
+++ b/packages/desktop-client/src/components/reports/overview.scss
@@ -12,3 +12,7 @@
   border-right: 2px solid var(--color-pageTextLight);
   border-bottom: 2px solid var(--color-pageTextLight);
 }
+
+.react-grid-item:hover {
+  z-index: 1000 !important;
+}
